[E8.S3] Avatar chat with context bundles (#210)
* feat(E8.S3): avatar chat with context bundles

* chore(#91): pipeline artifacts


---------
